--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav role="navigation">
+		<ul role="list">
+			<li role="listitem"><a href="#home">Home</li>
+			<li role="listitem"><a href="#about">About</a></li>
+			<li role="listitem"><a href="#audio">Audio</a></li>
+		</ul>
+	</nav>
+
+	<section id="audio">
+		<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+		</audio>
+		<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+		</audio>
+		<audio controls>
+		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+		</audio>
+	</section>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
