--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<nav role="navigation">
-		<ul role="list">
-			<li role="listitem"><a href="#home">Home</li>
-			<li role="listitem"><a href="#about">About</a></li>
-			<li role="listitem"><a href="#audio">Audio</a></li>
+	<nav>
+		<ul>
+			<li><a href="#home">Home</li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#audio">Audio</a></li>
 		</ul>
 	</nav>
 
