--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><a href="#home">Home</li>
-			<li><a href="#about">About</a></li>
-			<li><a href="#audio">Audio</a></li>
+			<li><a href="https://example.com/home">Home</a></li>
+            <li><a href="https://example.com/about">About</a></li>
+            <li><a href="https://example.com/contact">Contact</a></li>
 		</ul>
 	</nav>
 
